pom-sema/src/lowering/snapshots/fn_scopes-3.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\na: fn (b: i32) = {\n    c := b + b;\n};\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(2),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(5),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 24,
                        end: 35,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(6),
                            lhs: Id<Expr>(8),
                            rhs: Some(
                                Id<Expr>(7),
                            ),
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 38,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 11,
                        end: 14,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 8,
                        end: 9,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 29,
                        end: 30,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 33,
                        end: 34,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 29,
                        end: 34,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(5),
                    ),
                    span: Span {
                        start: 24,
                        end: 25,
                    },
                },
                Expr {
                    kind: Block(
                        [
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 18,
                        end: 37,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(6),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Type(
                    Some(
                        Id<Type>(1),
                    ),
                ),
                Type(
                    Some(
                        Id<Type>(2),
                    ),
                ),
                Type(
                    Some(
                        Id<Type>(3),
                    ),
                ),
                Expr(
                    Id<Expr>(1),
                ),
                Infer(
                    None,
                ),
                Fn {
                    params: [
                        Bind {
                            sym: Id<Sym>(4),
                            lhs: Id<Expr>(2),
                            rhs: None,
                        },
                    ],
                },
            ],
        ),
        types: Arena(
            [
                Type,
                Type,
                Type,
            ],
        ),
        builtins: Builtins {
            bool: Id<Type>(1),
            i32: Id<Type>(2),
            f32: Id<Type>(3),
        },
    },
    Arena(
        [],
    ),
)
