pom-sema/src/lowering/snapshots/invalid_scopes.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\n{\n    a := 55;\n    b := a + a;\n}\na := a;\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(2),
            Id<Stmt>(3),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(1),
                            sym: Id<Sym>(1),
                            rhs: Some(
                                Id<Expr>(0),
                            ),
                        },
                    ),
                    span: Span {
                        start: 7,
                        end: 15,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(5),
                            sym: Id<Sym>(2),
                            rhs: Some(
                                Id<Expr>(4),
                            ),
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 31,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 1,
                        end: 33,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(7),
                            sym: Id<Sym>(3),
                            rhs: Some(
                                Id<Expr>(6),
                            ),
                        },
                    ),
                    span: Span {
                        start: 34,
                        end: 41,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 12,
                        end: 14,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(1),
                    ),
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(1),
                    ),
                    span: Span {
                        start: 25,
                        end: 26,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(1),
                    ),
                    span: Span {
                        start: 29,
                        end: 30,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(2),
                        op: Add,
                        rhs: Id<Expr>(3),
                    },
                    span: Span {
                        start: 25,
                        end: 30,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 20,
                        end: 21,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 39,
                        end: 40,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(3),
                    ),
                    span: Span {
                        start: 34,
                        end: 35,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Sym {
                    kind: Type,
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Infer,
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnknownSymbol,
                span: Span {
                    start: 39,
                    end: 40,
                },
            },
        ],
    ),
)
